--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Compile
 
 on: [pull_request]
 
@@ -15,7 +15,4 @@ jobs:
           cache: maven
 
       - name: Compile
-        env:
-          GITHUB_USERNAME: x-access-token
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: mvn -s settings.xml compile
